--- a/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Updateform/Updatedata.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Updateform/Updatedata.css
@@ -32,15 +32,15 @@
   content: "";
   height: 18px; width: 18px;
   left: 3px; bottom: 3px;
-  background-color: white;
+  background-color: white; 
   transition: 0.4s;
   border-radius: 50%;
 }
 
 input:checked + .slider {
-  background-color: green;
+  background-color: gray;
 }
 
 input:checked + .slider:before {
   transform: translateX(22px);
-}
+} 
