--- a/Insurance-app-main/src/Components/AdminDashboard/Attendance/attendance.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/Attendance/attendance.css
@@ -2,10 +2,26 @@
   margin-top: 50px;
 }
 
+.calendar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 300px; 
+  max-height: 320px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 1000;
+}
+
 .attendance-header-container{
   padding: 20px;
 }
-/* Attendance Status Icons */
+
 .present-icon {
   color: #10B981;
   font-size: 1.2rem;
@@ -21,7 +37,6 @@
   font-size: 1.2rem;
 }
 
-/* Table Styles */
 .attend-1 {
   width: 100%;
   border-collapse: collapse;
@@ -38,14 +53,13 @@
   font-weight: 600;
 }
 
-/* Calendar Container */
 .calendar-container {
   margin: 20px 0;
   display: flex;
   justify-content: center;
 }
 
-/* Status Column */
+
 .attend-1 td:last-child {
   font-weight: 500;
   text-transform: capitalize;
@@ -59,6 +73,7 @@
   padding: 15px;
   border-radius: 5px;
   box-shadow: 0 1px 6px #d1d1d1;
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
   position: relative;
 }
 
