--- a/Insurance-app-main/src/Components/Register/Register.css
+++ b/Insurance-app-main/src/Components/Register/Register.css
@@ -13,7 +13,7 @@
     left: 0;
     height: 100%;
     width: 100%;
-    background-image: url('../../../public/insurance2.jpg');
+    background-image: url('../../../public/login2.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -26,6 +26,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  
+
 }
 .form-control-register{
     width: 100%;
@@ -44,14 +46,14 @@
 }
 
 .form-control-register:focus {
-    border-bottom: 1.5px solid teal; 
+    border-bottom: 1.5px solid navy; 
 }
 .register-btn{
     margin: auto;
     display: block;
     padding: 10px;
-    width: 30%;
-    background-color: teal;
+    width: ;
+    background-color:navy;
     color: white;
 }
 
@@ -117,11 +119,11 @@
 }
 @media screen and (max-width: 320px) {
     .register-btn {
-        width: 95%;
+        width: 70%;
     }
 
     .form-data {
-        padding: 8px;
+        padding: 15px;
     }
 
     .button-container .button-group {
