--- a/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Users.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Users.css
@@ -29,17 +29,20 @@
 }
 
 .table-container {
-    height: 70vh;
+    height: 60vh;
     overflow-y: auto;
+    padding: 20px;
 }
 
 .users-table {
-    border-collapse: collapse;
+    border-collapse: separate;
+    overflow: auto;
+    border-spacing: 0;
+    border-radius: 5px;
     margin: auto;
     width: 100%;
     cursor: pointer;
     box-shadow: 1px 7px 15px gainsboro;
-    overflow-x: auto;
 }
 
 .users-table thead th {
