--- a/Insurance-app-main/src/Components/Sidebar/Sidebar.css
+++ b/Insurance-app-main/src/Components/Sidebar/Sidebar.css
@@ -81,6 +81,11 @@
     list-style: none;
   }
 
+  .attendance-icon{
+    position: absolute;
+    left:76%;
+  }
+
   @media only screen and (min-width:501px) and (max-width:768px){
     .sidebar-list-logout{
       display: none;
